Fix background gradient on mobile

--- a/src/containers/App.scss
+++ b/src/containers/App.scss
@@ -33,6 +33,11 @@
   }
 }
 
+html,
+body {
+  height: 100%;
+}
+
 body {
   background-color: transparent !important;
   background-image: linear-gradient(
@@ -320,7 +325,7 @@ a {
       box-shadow: none;
       padding: 0.8rem 1rem;
       border: 1px solid transparent;
-      border-radius: 4px;
+      border-radius: 0;
     }
 
     &:hover,
@@ -331,7 +336,7 @@ a {
       background: var(--rf-color-border);
 
       @include mobile {
-        border-color: var(--rf-color-link--hover);
+        border-color: rgb(54, 226, 248);
       }
     }
   }
